--- a/content/src/main/content/jcr_root/apps/first/components/content/identite/identite.html
+++ b/content/src/main/content/jcr_root/apps/first/components/content/identite/identite.html
@@ -1,12 +1,18 @@
 <sly>
-    <div >
-        <div class="wrapper">
-            <span data-sly-test="${wcmmode.edit && !properties.identite}">BLOC TITRE VIDE</span>
-            <h1>${properties.jcr:title}</h1>
+<div>
+	<div class="wrapper">
+		<span data-sly-test="${wcmmode.edit && !properties.identite}">BLOC
+			TITRE VIDE</span>
+		<h1>${properties.jcr:title}</h1>
 
-            <h2>Sex :   ${properties.identite}</h2>
-            <h2>Nom :   ${properties.nom}</h2>
-            <h2>Prenom : ${properties.preNom }</h2>
-        </div>
-    </div>
+		<h2>Sex : ${properties.identite}</h2>
+		<h2>Nom : ${properties.nom}</h2>
+		<h2>Prenom : ${properties.preNom }</h2>
+		<div data-sly-use.identiteUse="${'com.aem.training.components.use.IdentiteTextComponent'}">
+			<h1>${identiteUse.messageDisply}</h1>
+
+		</div>
+
+	</div>
+</div>
 </sly>
