mise a jour tp6

--- a/content/src/main/content/jcr_root/apps/first/components/content/identite/identite.html
+++ b/content/src/main/content/jcr_root/apps/first/components/content/identite/identite.html
@@ -9,7 +9,8 @@
 		<h2>Nom : ${properties.nom}</h2>
 		<h2>Prenom : ${properties.preNom }</h2>
 		<div data-sly-use.identiteUse="${'com.aem.training.components.use.IdentiteTextComponent'}">
-			<h1>${identiteUse.messageDisply}</h1>
+			<h1>tnaket 3alina sling model :  ${identiteUse.messageDisply}</h1>
+			<h1>tnaket 3alina Request  :   ${identiteUse.messageDisplyHttp}</h1>
 
 		</div>
 
